--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> 1234</h1>
+    <button onclick="anvao ()">Ấn vào đây này</button>
+    <script>
+        function anvao () {
+            let name = prompt ("Tên bạn là gì?")
+            alert ("Yêu " + name)
+        }
+    </script>
 </body>
 </html>
