--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script>
         function anvao () {
             let name = prompt ("Tên bạn là gì?")
-            alert ("Yêu " + name)
+            alert ( name + " bị  điên à")
         }
     </script>
 </body>
